--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://karankotar11.github.io/iNoteBook",
   "name": "inotebook",
   "version": "0.1.0",
   "private": true,
@@ -17,6 +18,8 @@
   },
   "scripts": {
     "start": "concurrently \"react-scripts start\" \"nodemon backend/index.js\"",
+    "predeploy":"concurrently \"npm run build\" \"npm run start\"",
+    "deploy":"gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
