--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "start": "concurrently \"react-scripts start\" \"nodemon backend/index.js\"",
-    "predeploy":"concurrently \"npm run build\" \"npm run start\"",
+    "predeploy":"npm run build",
     "deploy":"gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
